--- a/css/styles.css
+++ b/css/styles.css
@@ -568,13 +568,15 @@ img {
   display: flex;
 }
 
-.subscribe__text {
-  margin-bottom: 16px;
+.subscribe-label {
+  display: flex;
+  flex-direction: column;
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #fff;
+  gap: 16px;
 }
 
 .footer-email__input {
@@ -594,8 +596,8 @@ img {
   width: 165px;
   height: 40px;
   background-color: #4d5ae5;
-  align-self: flex-end;
   cursor: pointer;
+  align-self: flex-end;
 }
 
 .footer-button {
@@ -726,17 +728,14 @@ img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 4px;
   position: relative;
   margin-bottom: 8px;
-}
-
-.modal-name__text {
   font-weight: 400;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  margin-bottom: 4px;
 }
 
 .modal__input {
@@ -781,7 +780,13 @@ textarea:focus {
   flex-direction: column;
   align-items: flex-start;
   position: relative;
+  gap: 4px;
   margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .modal__textarea {
@@ -811,14 +816,6 @@ textarea:focus {
   margin-bottom: 24px;
 }
 
-/* текст який після чекбоксу */
-.checkbox__text {
-  font-size: 12px;
-  line-height: 117%;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-}
-
 .checkbox__href {
   line-height: 133%;
   font-weight: 400;
@@ -827,6 +824,7 @@ textarea:focus {
   text-decoration-skip-ink: none;
   color: #4d5ae5;
   cursor: pointer;
+  margin-left: 3px;
 }
 
 /* checkbox */
@@ -836,6 +834,11 @@ textarea:focus {
 
 .for-check-label {
   display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .for-check {
